# mmal-video-record

./: .gitignore  CMakeLists.txt  LICENSE  README.md  video_record.c
